--- a/BullsAndCows/BullsAndCows.csproj
+++ b/BullsAndCows/BullsAndCows.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>BullsAndCows</RootNamespace>
     <CodeAnalysisRuleSet>StyleCop.ruleset</CodeAnalysisRuleSet>
+    <OutputType>Exe</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
